2000-07-04  NIIBE Yutaka  <gniibe@chroot.org>

	* locale/programs/charmap.c (charmap_read): Prepend
	the condition filename == NULL.

2000-07-03  Greg McGary  <greg@mcgary.org>

	* sysdeps/powerpc/strchr.S:  Check bounds.
	Wrap extern symbols in BP_SYM ().

2000-07-03  Andreas Jaeger  <aj@suse.de>
	* dlfcn/Makefile (generated): New.

2000-07-03  Ulrich Drepper  <drepper@redhat.com>

	* libio/genops.c (__overflow): Use _IO_fwide to orient the stream.
	(__uflow): Likewise.
	(__underflow): Likewise.
	* libio/wgenops.c (__wunderflow): Likewise.
	* stdio-common/tst-unbputc.c: New file.
	* stdio-common/tst-unbputc.sh: New file.
	* stdio-common/Makefile: Add rules to build and run tst-unbputc.

	* po/en_GB.po: New file.
	Contributed by Robert Brady <rwb197@ecs.soton.ac.uk>.

2000-07-01  Andreas Jaeger  <aj@suse.de>

	* intl/Makefile (generated-dirs): New.

	* elf/Makefile (generated): trusted-dirs.h is always generated,
	move out of build-shared condition.
	(generated): Merge the two entries for build-shared.

2000-07-01  Ulrich Drepper  <drepper@redhat.com>

	* debug/Makefile (distribute): Add xtrace.sh.

2000-06-30  Ulrich Drepper  <drepper@redhat.com>

	* version.h (VERSION): Bump to 2.1.91.

	* configure.in: Update warning comment.  glibc should not be
	broken anymore.

	* sysdeps/unix/sysv/linux/ia64/Dist: Remove old content.  Add
	ioperm.c, sys/procfs.h, and sys/io.h.

	* sysdeps/powerpc/Dist: Add bp-asm.h.

	* assert/Depend: Add localedata.
	* assert/Makefile (test-assert-ENV): New.  Define LANGUAGE=C.
	(test-assert-perr-ENV): New.  Define LANGUAGE=C.

	* sysdeps/alpha/dl-machine.h (elf_machine_rela) [r_type ==
	R_ALPHA_REFQUAD]: Use memcpy to load and store value from
	relocation address to prevent unaligned trap.
	Suggested by Richard Henderson <rth@cygnus.com>.

2000-06-30  Jakub Jelinek  <jakub@redhat.com>

	* io/sys/stat.h (stat64, lstat64, fstat64): Don't define inlines
	if redirecting and either redirection is done using defines or
	not optimizing.
